Sutter Health/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Actual_Hours__c</fullName>
        <label>Actual Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Action_Plan__c</fullName>
        <label>Annual Action Plan</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>IC_Meeting_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Send Welcome Kit</fullName>
                </value>
                <value>
                    <fullName>Send Reminder on Upcoming Renewals</fullName>
                </value>
                <value>
                    <fullName>Follow-up with Broker For Renewal</fullName>
                </value>
                <value>
                    <fullName>Follow-up Meeting Details For Renewal</fullName>
                </value>
                <value>
                    <fullName>Send Employer Survey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Candidate_Connect__c</fullName>
        <description>This field shows that how many days sourcing agent has to connect with Candidate</description>
        <label>Candidate Connect</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Activity_Type__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>IF(CONTAINS( Subject , &quot;Email&quot;), &quot;Email&quot;, IF(CONTAINS( Subject , &quot;Cold Call&quot;), &quot;Cold Call&quot;, IF(CONTAINS( Subject , &quot;Call&quot;), &quot;Call&quot;, IF(CONTAINS( Subject , &quot;Meeting&quot;), &quot;Meeting&quot;, IF(CONTAINS( Subject , &quot;On Site Visit&quot;), &quot;Site Visit&quot;, IF(CONTAINS( Subject , &quot;Quote&quot;), &quot;Send Letter/Quote&quot;, &quot;Other&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Campaigns__c</fullName>
        <label>Digital Campaigns</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>12-Week Stress Less</fullName>
                </value>
                <value>
                    <fullName>12-Week Weight Management</fullName>
                </value>
                <value>
                    <fullName>4-Week DeStress Your Work</fullName>
                </value>
                <value>
                    <fullName>4-Week Hydration</fullName>
                </value>
                <value>
                    <fullName>6-Month Weight Management</fullName>
                </value>
                <value>
                    <fullName>Breast cancer</fullName>
                </value>
                <value>
                    <fullName>Diabetes prevention</fullName>
                </value>
                <value>
                    <fullName>Dine on Nine–fruits &amp; vegetable series</fullName>
                </value>
                <value>
                    <fullName>Headache management</fullName>
                </value>
                <value>
                    <fullName>Healthy heart</fullName>
                </value>
                <value>
                    <fullName>Healthy pregnancy</fullName>
                </value>
                <value>
                    <fullName>Overcoming healthy lifestyle obstacles</fullName>
                </value>
                <value>
                    <fullName>Sleep</fullName>
                </value>
                <value>
                    <fullName>Smoking cessation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IC_Meeting_Type__c</fullName>
        <label>IC Meeting Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Annual Planning</fullName>
                </value>
                <value>
                    <fullName>Intro Meeting</fullName>
                </value>
                <value>
                    <fullName>Upsell</fullName>
                </value>
                <value>
                    <fullName>Wellness Meeting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incumbent_Carriers__c</fullName>
        <label>Carrier Partners</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AETNA</fullName>
                </value>
                <value>
                    <fullName>ANTHEM</fullName>
                </value>
                <value>
                    <fullName>BLUE SHIELD</fullName>
                </value>
                <value>
                    <fullName>CAL CHOICE</fullName>
                </value>
                <value>
                    <fullName>CALPERS</fullName>
                </value>
                <value>
                    <fullName>CHINESE COMMUNITY HEALTH PLAN</fullName>
                </value>
                <value>
                    <fullName>CIGNA</fullName>
                </value>
                <value>
                    <fullName>HEALTH NET</fullName>
                </value>
                <value>
                    <fullName>KAISER</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
                <value>
                    <fullName>SELF FUNDED</fullName>
                </value>
                <value>
                    <fullName>SHP</fullName>
                </value>
                <value>
                    <fullName>UNITED Health Care</fullName>
                </value>
                <value>
                    <fullName>WHA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Interest__c</fullName>
        <label>Market Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual Action Plan</fullName>
                </value>
                <value>
                    <fullName>Biometrics</fullName>
                </value>
                <value>
                    <fullName>EAP</fullName>
                </value>
                <value>
                    <fullName>Etips</fullName>
                </value>
                <value>
                    <fullName>Executive Health</fullName>
                </value>
                <value>
                    <fullName>Flu Clinic</fullName>
                </value>
                <value>
                    <fullName>Health &amp; Wellness Screening Committee</fullName>
                </value>
                <value>
                    <fullName>Health Coaching</fullName>
                </value>
                <value>
                    <fullName>Health Fairs</fullName>
                </value>
                <value>
                    <fullName>HRA</fullName>
                </value>
                <value>
                    <fullName>IHH</fullName>
                </value>
                <value>
                    <fullName>LWFL Program</fullName>
                </value>
                <value>
                    <fullName>Mobile Clinic</fullName>
                </value>
                <value>
                    <fullName>Occupational Health</fullName>
                </value>
                <value>
                    <fullName>Onsite Clinics</fullName>
                </value>
                <value>
                    <fullName>Onsite lectures</fullName>
                </value>
                <value>
                    <fullName>Open Enrollment Participation</fullName>
                </value>
                <value>
                    <fullName>PEP Product</fullName>
                </value>
                <value>
                    <fullName>Quarterly Newsletter</fullName>
                </value>
                <value>
                    <fullName>Service Line promotion (then sub tier with service line)</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Sutter Care At Home</fullName>
                </value>
                <value>
                    <fullName>Sutter Health Plus (SHP)</fullName>
                </value>
                <value>
                    <fullName>Tele-Medicine</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_Agenda__c</fullName>
        <label>Meeting Agenda</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_Mode__c</fullName>
        <label>Meeting Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>In Person</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>WebEx</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_Result__c</fullName>
        <label>Meeting Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Follow Up Meeting</fullName>
                </value>
                <value>
                    <fullName>Meeting Cancelled</fullName>
                </value>
                <value>
                    <fullName>Received Agreement Details</fullName>
                </value>
                <value>
                    <fullName>Received Information For Prospect Account</fullName>
                </value>
                <value>
                    <fullName>Received Opportunity Details</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_Type__c</fullName>
        <label>Meeting Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st Meeting</fullName>
                </value>
                <value>
                    <fullName>Follow-up Meeting</fullName>
                </value>
                <value>
                    <fullName>Touch Point Meeting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_With_Executive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Meeting With Executive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Please_specify_other__c</fullName>
        <label>Please specify other</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_Hours__c</fullName>
        <label>Projected Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <inlineHelpText>Enter Reason why Status is On Hold or Deferred</inlineHelpText>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_Line_Product_Promotion__c</fullName>
        <label>Service Line/Product Promotion</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bariatric</fullName>
                </value>
                <value>
                    <fullName>Cardiology</fullName>
                </value>
                <value>
                    <fullName>EAP</fullName>
                </value>
                <value>
                    <fullName>Elder Care</fullName>
                </value>
                <value>
                    <fullName>Executive Health</fullName>
                </value>
                <value>
                    <fullName>IHH</fullName>
                </value>
                <value>
                    <fullName>Lung Nodule Clinic</fullName>
                </value>
                <value>
                    <fullName>Men&apos;s Health</fullName>
                </value>
                <value>
                    <fullName>Mental Health</fullName>
                </value>
                <value>
                    <fullName>Neuroscience</fullName>
                </value>
                <value>
                    <fullName>Occupational Medicine</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>Orthopedics</fullName>
                </value>
                <value>
                    <fullName>SHP (Sutter Health Plus)</fullName>
                </value>
                <value>
                    <fullName>Sutter Care at Home</fullName>
                </value>
                <value>
                    <fullName>Womens and Children</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Opportunities__c</fullName>
        <label>Strategic Opportunities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Executive Engagement</fullName>
                </value>
                <value>
                    <fullName>Mobile Clinic</fullName>
                </value>
                <value>
                    <fullName>On-Site Clinic</fullName>
                </value>
                <value>
                    <fullName>PEP Product</fullName>
                </value>
                <value>
                    <fullName>PHM Collaboration</fullName>
                </value>
                <value>
                    <fullName>Experiment A</fullName>
                </value>
                <value>
                    <fullName>Experiment B</fullName>
                </value>
                <value>
                    <fullName>Experiment C</fullName>
                </value>
                <value>
                    <fullName>Experiment D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Type1__c</fullName>
        <formula>HYPERLINK(&quot;javascript:if(typeof(srcUp)==&apos;function&apos;) {srcUp(&apos;/&quot; &amp; Id &amp; &quot;?isdtp=vw&apos;);}&quot;+ &quot; else {window.location.href=&apos;/&quot; &amp; Id &amp; &quot;&apos;}&quot;, Type_Value__c, &quot;_self&quot;)</formula>
        <label>Task Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Type__c</fullName>
        <label>Task Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Documentation</fullName>
                </value>
                <value>
                    <fullName>HealthStream</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Patient Build</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>System Build</fullName>
                </value>
                <value>
                    <fullName>Validation</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_Value__c</fullName>
        <formula>CASE(Training_Type__c, &quot;Documentation&quot;,&quot;Documentation&quot;,
&quot;HealthStream&quot;,&quot;HealthStream&quot;,
&quot;Meeting&quot;,&quot;Meeting&quot;,
&quot;Patient Build&quot;,&quot;Patient Build&quot;,
&quot;Review&quot;,&quot;Review&quot;,
&quot;System Build&quot;,&quot;System Build&quot;,
&quot;Validation&quot;,&quot;Validation&quot;, 
&quot;Training&quot;, &quot;Training&quot;, Null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type Value</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>